# BDD

./: 404.html  CMakeLists.txt  Makefile  README.md  index.html  install_BDD  mkdocs.yml
blockdiag/: adt.f90  bdglobal.f90  blockdiag.f90  detparsing.f90  mooverlaps.f90  overlaps.f90  pacher.f90  tamura.f90  wfoverlaps.f90
cmake/: CompilerFlags.cmake
displace/: dispglobal.f90  displace.f90  index.html
docs/: _config.yml  displace.md  index.md  kdc.md  mergeop.md  pltkdc.md  pltkdc_py.md
examples/ethylene_mcscf/: runall
examples/ethylene_mcscf/theta_100/: theta_100.inp
examples/ethylene_mcscf/theta_105/: theta_105.inp
examples/ethylene_mcscf/theta_110/: theta_110.inp
examples/ethylene_mcscf/theta_115/: theta_115.inp
examples/ethylene_mcscf/theta_120/: theta_120.inp
examples/ethylene_mcscf/theta_125/: theta_125.inp
examples/ethylene_mcscf/theta_130/: theta_130.inp
examples/ethylene_mcscf/theta_135/: theta_135.inp
examples/ethylene_mcscf/theta_140/: theta_140.inp
examples/ethylene_mcscf/theta_145/: theta_145.inp
examples/ethylene_mcscf/theta_150/: theta_150.inp
examples/ethylene_mcscf/theta_155/: theta_155.inp
examples/ethylene_mcscf/theta_160/: theta_160.inp
examples/ethylene_mcscf/theta_165/: theta_165.inp
examples/ethylene_mcscf/theta_170/: theta_170.inp
examples/ethylene_mcscf/theta_175/: theta_175.inp
examples/ethylene_mcscf/theta_90/: theta_90.inp
examples/ethylene_mcscf/theta_95/: theta_95.inp
gridfunc/: dvr.f90  extfunc.f90  func.f90  gridfunc.f90  gridglobal.f90
include/: channels.f90  constants.f90  sysinfo.f90
iomodules/: iomod.f90  parsemod.f90
ioqc/: ioqc.f90
kdc/: cartgrad.f90  fdmod.f90  index.html  kdc.f90  kdcglobal.f90  nmeqmod.f90  opermod.f90  parinfo.f90  reexpand.f90  transform.f90
mergeop/: index.html  mergeglobal.f90  mergeop.f90
multi/: accuracy.f90
opt/: geomopt.f90  opt.f90
pltkdc/: index.html  pltglobal.f90  pltkdc.f90
pltkdc_py/: index.html
potfuncs/: parameters.f90  potfuncs.f90
python/: bdd_potlib.f90  build_potlib.sh  pltdata.f90  pltkdc.py
scripts/: runchain  runchain.py
search/: search_index.json
symmetry/: symmetry.f90
utilities/: timingmod.f90  utils.f90
